[package]
name = "kak-broot"
version = "0.1.0"
authors = ["Shaurya Shubham <shauryashubham1234567890@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kak-ui = "0.2"
serde_json = "1.0"
anyhow = "1.0"
structopt = "0.3"
